<resources>
    <string name="app_name">Who\'sPayin</string>
    <string name="who_apos_s_payin">Who\'s Payin?</string>
    <string name="enter_a_game">Enter A Game</string>
    <string name="create_a_game">Create A Game</string>
    <string name="creating_game">Creating Game</string>
    <string name="player_name">Player Name</string>
    <string name="start_game">Start Game</string>
    <string name="local_game_instances">Local Game Instances</string>
    <string name="join_selected_game">Join Selected Game</string>
    <string name="enter_a_username">username</string>
    <string name="save_name">Save Name</string>
    <string name="current_name_none">Current Name: None</string>
    <string name="current_name">Current Name: </string>
    <string name="error_msg">Cannot create game instance</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
    <string name="game_lobby">Game Lobby</string>
    <string name="host">Host:</string>
    <string name="ready">Ready</string>
    <string name="not_ready">Not Ready</string>
</resources>
