<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.eggbeatstudios.cedric.whospayin.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/who_apos_s_payin"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_a_game"
        android:id="@+id/enterGameButton"
        android:onClick="enterGame"
        android:layout_below="@+id/usernameInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_game"
        android:id="@+id/createGameButton"
        android:onClick="createGame"
        android:layout_alignTop="@+id/enterGameButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/usernameInput"
        android:hint="@string/enter_a_username"
        android:layout_marginTop="64dp"
        android:inputType="text"
        android:layout_below="@+id/title"
        android:layout_toLeftOf="@+id/createGameButton"
        android:layout_toStartOf="@+id/createGameButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_name"
        android:id="@+id/saveUsernameButton"
        android:layout_alignTop="@+id/usernameInput"
        android:layout_toRightOf="@+id/usernameInput"
        android:layout_toEndOf="@+id/usernameInput"
        android:onClick="saveName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/current_name_none"
        android:id="@+id/displayCurrentName"
        android:layout_marginBottom="68dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000000" />

</RelativeLayout>
