<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/game_lobby"
        android:id="@+id/gameLobbyText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/host"
        android:id="@+id/hostName"
        android:layout_below="@+id/gameLobbyText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/player_name"
        android:id="@+id/playerNames"
        android:layout_below="@+id/hostName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp" />
    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="com.eggbeatstudios.cedric.whospayin.ListFrag"
        android:id="@+id/playerList"
        android:layout_below="@+id/playerNames"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:layout="@layout/list_frag" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ready"
        android:id="@+id/readyButton"
        android:layout_below="@+id/playerList"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:onClick="setReady" />
</RelativeLayout>
