<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.eggbeatstudios.cedric.whospayin.CreateGameInstance">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/creating_game"
        android:id="@+id/createGameTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/player_name"
        android:id="@+id/playerNameText"
        android:layout_below="@+id/createGameTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:id="@+id/listView"
        android:layout_below="@+id/playerNameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:id="@+id/startGameButton"
        android:onClick="startGame"
        android:layout_below="@+id/listView"
        android:layout_alignRight="@+id/listView"
        android:layout_alignEnd="@+id/listView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/errorMessage"
        android:layout_below="@+id/createGameTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_to_main_menu"
        android:id="@+id/returnMainMenuButton"
        android:layout_below="@+id/listView"
        android:layout_toRightOf="@+id/errorMessage"
        android:layout_toEndOf="@+id/errorMessage"
        android:onClick="goMainMenu" />
</RelativeLayout>
